# trash_detector

docker/: Dockerfile  compose.yaml
trash_detector/: CMakeLists.txt  package.xml
trash_detector/config/: params.yaml
trash_detector/launch/: trash_detector.launch
trash_detector/src/: trash_detector_node.cpp  trash_detector_node.hpp
trash_detector_interfaces/: CMakeLists.txt  package.xml
trash_detector_interfaces/srv/: DetectTrash.srv
